@@ -1,6 +1,10 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2005, PHP 5.1 Beta 3
+- Fixed support for shared extensions on AIX. Now CLI/CGI PHP binaries are 
+  compiled with runtime linker. Shared extensions are compiled as .so (ready
+  for runtime linking). To support shared extensions Apache/Apache2 must be
+  linked with -brtl too. (Dmitry)
 - Upgraded bundled SQLite library for PDO:SQLite to 3.2.2 (Ilia)
 - Added PDO_MYSQL_ATTR_USE_BUFFERED_QUERY parameter for pdo_mysql. (Ilia)
 - Added date_timezone_set() function to set the timezone that the date
